--- a/openlibrary/package.json
+++ b/openlibrary/package.json
@@ -10,7 +10,9 @@
     "carbon-components": "^10.58.10",
     "carbon-icons": "^7.0.7",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
+    "react-image": "^4.1.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
